# Plasma-Agentic-AI-Generative-World-Model

./: .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MERGE_GUIDE.md  MERGE_SUMMARY.md  ORGANIZATION_COMMANDS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  client.py  development.txt  examples.py  feature.txt  pyproject.toml  requirements.txt  server.py  setup.py
contrib/: README.md  __init__.py
contrib/recipes/: basic_simulation.py  client_server_demo.py  lora_training.py
core/: __init__.py  config.py  simulation_engine.py
docs/: README.md
examples/: README.md
instruction_packets/: __init__.py  compiler.py  config.py  runtime.py
plasma/: README.md  __init__.py
plasma/auditor/: __init__.py  adversarial_checker.py  auditor.py  review_engine.py
plasma/distiller/: __init__.py  distiller.py  instruction_packet.py  lora_injector.py
plasma/simulator/: __init__.py  phantom_path.py  simulator.py  world_model.py
plasma/trace/: __init__.py  atomic_span.py  models.py  state_tracker.py
scripts/: eval.py  example.py  train.py
src/plasma/: __init__.py  distiller.py  judicial_auditor.py  phantom_path.py  plasma_agent.py  state_traces.py
tests/: README.md  conftest.py  test_instruction_packets.py  test_plasma.py  test_simulation_engine.py  test_world_model.py
world_model/: __init__.py  config.py  generative_env.py
