[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plasma-agentic-ai-generative-world-model"
version = "0.1.0"
description = "Next-gen evolution of Agent Lightning with Phantom-Path Simulations and LoRA Distillation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Plasma Agentic AI Team"}
]
keywords = ["ai", "reinforcement-learning", "world-model", "lora", "agent-lightning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core dependencies
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # LoRA Distillation dependencies
    "transformers>=4.30.0",
    "peft>=0.4.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.39.0",
    
    # RL Training dependencies
    "gymnasium>=0.28.0",
    "stable-baselines3>=2.0.0",
    "sb3-contrib>=2.0.0",
    
    # World Model / Generative dependencies
    "diffusers>=0.18.0",
    "einops>=0.6.0",
    
    # Networking and API
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "httpx>=0.24.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]

contrib = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]

[project.urls]
Homepage = "https://github.com/sachinecin/Plasma-Agentic-AI-Generative-World-Model"
Repository = "https://github.com/sachinecin/Plasma-Agentic-AI-Generative-World-Model"
Issues = "https://github.com/sachinecin/Plasma-Agentic-AI-Generative-World-Model/issues"

[tool.setuptools]
packages = ["core", "world_model", "instruction_packets", "contrib"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=core --cov=world_model --cov=instruction_packets"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
